Home image scrollbars small fixes

--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -3,10 +3,11 @@
 .card-content{
   text-align: center;
   width: 350px;
-  border-radius: 15px;
   overflow: hidden;
   // border : solid 1px #19191e;
-  border-radius: 20px ;
+  border-radius: 10px ;
+  // border: 1px solid #f2f2f2;
+  // box-shadow:  1px -2px 7px 7px rgba(176,176,176,0.82);
   color: #19191e;
   background-color: #f2f2f2;
   height: auto;
@@ -18,16 +19,21 @@
 
   &--image{
       height: 25rem;
+      // width: 100%;
       padding: auto;
-      margin-bottom: 0rem;
-    
+      display: inline-block;
+      margin-top: 0.5rem;
+      margin: 0 auto;
+      text-align: center;
+      position:relative;
+      right: 0.8em;
+
   }
 
   &--description{
-    padding: auto;
+    padding: 1rem;
     margin-top: 0.5rem;
-    line-height: 1rem;
-    height: 10vh;
+    height: auto;
     line-height: 1.5rem;
     margin-bottom: 1rem;
   }
