--- a/src/components/Cgu/cgu.scss
+++ b/src/components/Cgu/cgu.scss
@@ -16,11 +16,12 @@
     color: #ee581e;
     margin-top: 1rem;
     margin-bottom: 0.5rem;
-    font-style: italic;
+    // font-style: italic;
   }
 
   &__articleContent{
     margin-bottom: 1.5rem;
     line-height: 1.5rem;
+    text-align: justify;
   }
 }
