--- a/src/components/Distributor/distributor.scss
+++ b/src/components/Distributor/distributor.scss
@@ -1,18 +1,16 @@
 .distributor{
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
-    white-space: nowrap;
-    max-height: 65vh;
+    height: 65vh;
     padding: 2rem 1rem;
     margin: 4rem auto;
-    border-radius: 10px;
     background-color: #19191E;
     margin-bottom: 95px;
     width: min-content;
+    border-radius: 10px;
+
     &__form{
         display: flex;
-        overflow-y: auto;
         &__chips {
             display: flex;
             flex-direction: column;
@@ -20,9 +18,7 @@
             justify-content: space-between;
             background-color: #19191E;
             height: 550px;
-            overflow-y: auto;
-            width: auto;
-
+            width: 550px;
         }
         &__subtitle{
             color: #F2F2F2;
@@ -47,6 +43,7 @@
                 color: #EE581E;
             }
         }
+
         &__calculate{
             background-color: #EE581E;
             color: #F2F2F2;
@@ -67,6 +64,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            overflow-y: scroll;
             width: 560px;
             &__buttons{
                 display: flex;
@@ -137,6 +135,7 @@
                         }
                     }
                 }
+
                 &__result{
                     // border: 2px solid #F2F2F2;
                     padding: 1rem 1rem 2rem 1rem;
