--- a/src/components/Faq/faq.scss
+++ b/src/components/Faq/faq.scss
@@ -3,16 +3,17 @@ main {
     color: #19191e;
     width: 45vw;
     margin: auto;
-    text-align: center;
+    // text-align: center;
     padding: 10px;
     padding-bottom: 100px;
     padding-left: 100px;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
 h1 {
     font-size: 1.5rem;
     font-weight: bold;
+    text-align: center;
     margin-top:  5.5rem;
     padding: 0rem;
     margin-bottom: 3rem;
