--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -11,7 +11,7 @@
 
   &__title {
     margin-bottom: 0rem;
-    padding-top: 4rem;
+    padding-top: 2rem;
     padding-bottom: 0rem;
     font-size: 2rem;
     font-weight: bold;
